--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@react-three/fiber": "^8.15.11",
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.5.1",
     "expo": "~49.0.8",
+    "expo-gl": "^13.2.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
