--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/stack": "^6.3.17",
     "@react-three/fiber": "^8.15.11",
     "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
     "axios": "^1.5.1",
+    "eva-icons": "^1.1.3",
     "expo": "~49.0.8",
     "expo-gl": "^13.2.0",
     "expo-status-bar": "~1.6.0",
@@ -26,7 +28,9 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "three": "^0.158.0"
+    "react-native-snap-carousel": "^3.9.1",
+    "three": "^0.158.0",
+    "expo-linear-gradient": "~12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
