--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fontsource/libre-baskerville": "^5.0.8",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
+    "@react-navigation/stack": "^6.3.20",
     "@react-three/fiber": "^8.15.11",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
@@ -21,16 +21,19 @@
     "eva-icons": "^1.1.3",
     "expo": "~49.0.8",
     "expo-gl": "^13.2.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
-    "three": "^0.158.0",
-    "expo-linear-gradient": "~12.3.0"
+    "react-navigation": "^5.0.0",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
